improved INSTALL instructions - tomcat env vars, JAVA_OPTS...